fix(<NewsletterPopupContentB />): :lipstick: Remove fixed height of <NewsletterPopupContentBSkeleton /> to prevent layout shift

--- a/react-app/src/components/layouts/newsletter-popup-content-b/styles.module.scss
+++ b/react-app/src/components/layouts/newsletter-popup-content-b/styles.module.scss
@@ -17,10 +17,6 @@
   display: flex;
 }
 
-.NewsletterPopupContentBSkeleton {
-  height: 36.6875em;
-}
-
 .NewsletterPopupContentBSection {
   margin-top: auto;
   padding: 20px 22px 30px;
